Update requirements.txt to include sqlmodel, pydantic-settings, bcrypt, and python-multipart

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 fastapi
 uvicorn
 sqlalchemy
+sqlmodel
 psycopg2-binary
 pydantic
+pydantic-settings
 python-jose[cryptography]
 passlib[bcrypt]
+bcrypt
+python-multipart
